# my-paint

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu.yml  windows.yml
cmake/: deps.cmake  scripts.cmake
src/: CMakeLists.txt  main.cpp  pch.hpp
src/app/: app.cpp  app.hpp
src/render/: prim.cpp  prim.hpp  prim_coolection.cpp  prim_coolection.hpp  shader.cpp  shader.hpp  ssbo.hpp  vao.hpp
src/rnd/: prim.cpp  prim.hpp  prim_coolection.cpp  prim_coolection.hpp  shader.cpp  shader.hpp  ssbo.hpp  timer.hpp
src/server/: server.cpp  server.hpp
src/srv/: server.cpp  server.hpp
src/window/: window.cpp  window.hpp
